Currently if a user tries to run Kudu on a machine that doesn't have SSSE3 or SSE4.2, they get a SIGILL when we try to run a instruction from those instruction sets. Instead, we should check for those flags at startup and FATAL with a nice message.
If this turns out to limit adoption, we can put in some effort to cordon off the SSE-enabled parts of the code and provide non-SSE alternatives.